# harlowe

./: .gitignore  CLAUDE.md  IMPLEMENTATION_SUMMARY.md  MANUAL_TEST_PLAN.md  PROJECT_SUMMARY.md  README.md  RESOURCE_FILES_GUIDE.md  RICH_RENDERING_NOTES.md  TEST_CHAT_FIXES.md  USAGE.md  pyproject.toml  test.md  test_block_mapping.py  test_cli_chat.py  test_coordinates.py  test_cursor_skip.py  test_display_position.py  test_doc_comment.md  test_enter_key.md  test_resource_manager.py  test_rich_integration.py  test_rich_rendering.py  test_rich_rendering_v2.py  test_scroll.py  test_scroll_integration.py  test_scroll_integration2.py  test_scroll_region.py  test_softwrap_scroll.md  test_thread_mode.md  test_thread_selector.py  test_thread_views.md  test_ui_integration.py  test_wrap.md
md-editor/md-editor/: README.md  pyproject.toml  sample.md  test_close_thread_flow.md  test_keys.py
md-editor/md-editor/src/md_editor/: __init__.py  app.py  claude_executor.py  comment_input.py  git_manager.py  markdown_viewer.py  merge_coordinator.py  models.py  thread_chat_panel.py  thread_manager.py  thread_manager_concurrent.py  thread_selector.py  undo_manager.py
md-editor/md-editor/tests/: test_claude_executor.py  test_config.py  test_git_manager.py  test_merge_coordinator.py  test_status_messages.py  test_text_wrapping.py  test_thread_manager_concurrent.py  test_undo_manager.py  test_workspace_manager.py
tests/: __init__.py  test_claude_executor.py  test_config.py  test_git_manager.py  test_merge_coordinator.py  test_status_messages.py  test_text_wrapping.py  test_undo_manager.py  (+2 more)
(+10 files in other folders)
