[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "harlowe"
version = "0.1.0"
description = "CLI TUI app for commenting and editing markdown files with Claude"
authors = [{name = "Karl"}]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "textual>=0.47.0",
    "rich>=13.0.0",
    "asyncio",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "textual-dev>=1.0.0",
]

[project.scripts]
harlowe = "md_editor.main:main"

[tool.setuptools.packages.find]
where = ["src"]
